# realestate-backend

./: .gitignore  Cargo.toml  README.md
migrations/2023-06-13-173353_users/: up.sql
src/: config.rs  main.rs  schema.rs
src/models/: ticket.rs  user.rs
src/routes/: mod.rs  ticket_route.rs
src/service/: user_service.rs
